--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# Change the server port if 8080 is already bound
+server.port=8080
 
+# Driver class configured for postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Database credentials
+spring.datasource.url =jdbc:postgresql://localhost:5432/postgres?currentSchema=project_two
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# Next we need to configure some settings that will help Spring later when we talk to the db
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
