--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -5,10 +5,11 @@ server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Database credentials
-spring.datasource.url =jdbc:postgresql://localhost:5432/postgres?currentSchema=project_two
+# spring.datasource.url =jdbc:postgresql://localhost:5432/postgres?currentSchema=proj2
+spring.datasource.url=jdbc:postgresql://proj2.cyonktbjvevr.us-east-1.rds.amazonaws.com:5432/postgres?currentSchema=proj2
 spring.datasource.username=postgres
 spring.datasource.password=password
 
 # Next we need to configure some settings that will help Spring later when we talk to the db
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
